collapse nav links in mobile mode, fix other styling across modes

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,3 +2,8 @@ html body {
   background-color: #212121;
   margin: 0;
 }
+
+body .styledAnchor,
+body .styledAnchor:hover {
+  text-decoration: none;
+}
